# vimobot

./: .gitignore  README.md  environment.sh
catkin_ws/src/android/android_apps/: CMakeLists.txt  package.xml
catkin_ws/src/android/android_apps/src/: camera_server.py  joystick_server.py
catkin_ws/src/camera_arm/: CMakeLists.txt  package.xml
catkin_ws/src/camera_arm/config/: camera_arm_config.txt
catkin_ws/src/camera_arm/script/servo_arm/: servo_arm.ino
catkin_ws/src/camera_arm/src/: arm_calibrate.py  camera_arm.py
catkin_ws/src/control/joy_mapper/config_mapper/: default.yaml
catkin_ws/src/control/motor_control/src/: pwm_control.py  receive_encoder.cpp
catkin_ws/src/perception/perception_main/: CMakeLists.txt  package.xml
catkin_ws/src/perception/perception_main/launch/: ssd_lite_prediction.launch
catkin_ws/src/perception/perception_main/models/: README.md
catkin_ws/src/perception/ssd_mobile_lite/src/: bb_ssd_mobile_lite.py
catkin_ws/src/vimo_msgs/: CMakeLists.txt  package.xml
